# ipp-YUV-To-RGB

./: CMakeLists.txt  Readme.md
include/: YuvToRgbaConverter.h
src/: YuvToRgbaConverter.cpp
tests/: CMakeLists.txt  Test.cpp
